--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ target/
 *.iws
 *.iml
 *.ipr
-
+.idea
+src/main/java/com/m2i/filrougebo/dao/ConnectionManager.java
 ### Eclipse ###
 .apt_generated
 .classpath
