--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,16 @@ target/
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
+.idea/workspace.xml
+.idea/workspace.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/artifacts/
+.idea/dataSources.local.xml
+.idea/dataSources.xml
+.idea/dataSources/
+.idea/shelf/
+.idea/uiDesigner.xml
 *.iws
 *.iml
 *.ipr
@@ -36,3 +44,6 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### DB CONNECTION ###
+src/main/resources/app.properties
