--- a/.gitignore
+++ b/.gitignore
@@ -4,21 +4,17 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea
+.idea/workspace.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
-.idea/workspace.xml
-.idea/workspace.xml
 .idea/compiler.xml
 .idea/libraries/
-.idea/artifacts/
-.idea/dataSources.local.xml
-.idea/dataSources.xml
-.idea/dataSources/
-.idea/shelf/
-.idea/uiDesigner.xml
 *.iws
 *.iml
 *.ipr
+.idea
+.idea/workspace.xml
 
 ### Eclipse ###
 .apt_generated
@@ -44,6 +40,3 @@ build/
 
 ### Mac OS ###
 .DS_Store
-
-### DB CONNECTION ###
-src/main/resources/app.properties
