fix: allows to connect in both BO and FO project

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,10 @@
         <url-pattern>/webapi/*</url-pattern>
     </servlet-mapping>
 
+    <session-config>
+        <cookie-config>
+            <name>MY_JSESSIONID_BO</name>
+        </cookie-config>
+    </session-config>
+
 </web-app>
