--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,13 @@
         <url-pattern>/webapi/*</url-pattern>
     </servlet-mapping>
 
+    <error-page>
+        <exception-type>java.lang.RuntimeException</exception-type>
+        <location>/error-page.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error-page.jsp</location>
+    </error-page>
+
 </web-app>
